--- a/services/spring-boot-dome-1/src/main/resources/static/teat11.html
+++ b/services/spring-boot-dome-1/src/main/resources/static/teat11.html
@@ -1,41 +1,60 @@
 <template>
     <el-row>
         <el-col :span="24">
-            <input refs="fileref" type="file" style="display:none" id="people-export" ref="inputer" @change="fileUpload"/>
-            <el-button type="primary" @click="clickFile">上传文件</el-button>
+            <div class="ui-step-wrap">
+                <div class="ui-step-bg"></div>
+                <div class="ui-step-progress" style="width: 200px;"></div>
+                <ul class="ui-step">
+                    <li class="ui-step-item active" style="width: 200px;">
+                        <div class="ui-step-item-title">填写申请表</div>
+                        <div class="ui-step-item-num"><span>1</span></div>
+                    </li>
+                    <li class="ui-step-item" style="width: 200px;">
+                        <div class="ui-step-item-title">上传资料</div>
+                        <div class="ui-step-item-num"><span>2</span></div>
+                    </li>
+                    <li class="ui-step-item" style="width: 200px;">
+                        <div class="ui-step-item-title">待确认</div>
+                        <div class="ui-step-item-num"><span>3</span></div>
+                    </li>
+                    <li class="ui-step-item" style="width: 200px;">
+                        <div class="ui-step-item-title">已确认</div>
+                        <div class="ui-step-item-num"><span>4</span></div>
+                    </li>
+                    <li class="ui-step-item" style="width: 200px;">
+                        <div class="ui-step-item-title">预约完成</div>
+                        <div class="ui-step-item-num"><span>5</span></div>
+                    </li>
+                </ul>
+            </div>
+
         </el-col>
     </el-row>
 </template>
+<style>
 
+</style>
 <script>
     import Vue from 'vue'
 
     export default {
-        data(){
-            return {
-            }
+        data() {
+            return {}
         },
-        props: {
+        props: {},
+        computed: {},
+        components: {},
+        created() {
 
         },
-        computed: {
-
-
-        },
-        components:{
-
-        },
-        created(){
-
-        },
-        mounted(){
+        mounted() {
             debugger
         },
-        methods:{
-            clickFile(){
+        methods: {
+            clickFile() {
                 document.getElementById(this.$refs.inputer.id).click()
             },
-            fileUpload(event){
+            fileUpload(event) {
                 // 上传文件
                 console.log(event);
 
@@ -47,24 +66,24 @@
                 // 文件上传
                 this.$axios({
                     method: "POST",
-                    url:  '/file/upload',
+                    url: '/file/upload',
                     data: formData
                 }).then((res) => {
                     let data = res.data
-                    if(data.status==200) {
+                    if (data.status == 200) {
                         console.log(data);
                     } else {
                         this.$message.error(data.message || '操作失败')
                     }
                     this.uploadLoading = false
-                }).catch((e)=>{
+                }).catch((e) => {
                     this.uploadLoading = false
                     alert(e)
                 })
 
             },
         },
-        destroyed(){
+        destroyed() {
 
         },
     }
